# Game-Data-Analysis

./: .gitignore  README.md  run.bat
.github/ISSUE_TEMPLATE/: feature_request.md  wip_issue.md
Project/LeagueOfLegends/: Dockerfile  README.md  pyproject.toml
Project/LeagueOfLegends/.devcontainer/: devcontainer.json
Project/LoL/: .gitignore  Dockerfile  README.md  pyproject.toml
Project/LoL/.devcontainer/: devcontainer.json
Project/LoL/components/: base.py  formats.py
Project/LoL/components/dashboard_run/: component.py
Project/LoL/components/data_analyze/: component.py  notebook.ipynb
Project/LoL/components/data_collect/: component.py  config.yaml
Project/LoL/components/data_delete/: component.py
Project/LoL/components/data_upload/: component.py  config.yaml
Project/LoL/metabase/: README.md  dockerfile
Project/LoL/modules/anomaly_detection/: model_training.py
Project/LoL/modules/data_ingestion/: api_async.py  riot_api.py  streaming.py
Project/LoL/modules/data_ingestion/output/: account.json  league.json  match.json  matchids.json
Project/LoL/modules/data_processing/: cleaning.py  transformation.py
Project/LoL/modules/message_queue/: rabbitmq.py
Project/LoL/modules/storage/: adx.py  bigquery.py  duckdb.py  mongodb.py  postgres.py
Project/LoL/outputs/recent-1-summoner/: summoner.csv  summoner_league.csv  summoner_match.csv
Project/LoL/pipelines/: base.py
Project/LoL/pipelines/after_collect/: config.yaml  pipeline.py
Project/LoL/pipelines/default/: config.yaml  pipeline.py
Project/LoL/scripts/: run_pipeline.py
(+8 files in other folders)
